fixtures/errors/typedarray_invalid_length.js
new Uint8Array(-1);
